--- a/contact-us.html
+++ b/contact-us.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact us</title>
+
+    <!-- --- Favicon ---  -->
+    <link rel="icon" href="img/icons/favicon.svg" type="img" sizes="16x16">
     <!-- ------ Bootstrap -----  -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 
@@ -138,6 +141,16 @@
                             <div class="txt">
                                 <p>We’re interested in working together</p>
                                 <a href="tel:716-650-1597">716-650-1597</a><br>
+                                <a href="https://api.whatsapp.com/send?phone=716-650-1597"
+                                    class="whats">716-650-1597</a>
+                            </div>
+                        </div>
+                        <div class="detail-wrap numbs flex">
+                            <div class="icon">
+                                <img src="img/icons/phone.svg" alt="">
+                            </div>
+                            <div class="txt">
+                                <p>We’re interested in working together</p>
                                 <a href="tel:716-650-1597">03143711915</a><br>
                                 <a href="https://api.whatsapp.com/send?phone=03143711915" class="whats">03143711915</a>
                             </div>
@@ -147,25 +160,27 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="loc-wrap">
-                        <h4>Pakistan</h4>
-                        <p>A440 oppt to amna masjid block 5 Gulshan e Iqbal karachi</p>
-                    </div>
-                    <div class="map">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1075.7651899541536!2d67.08937384503122!3d24.91747294637507!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33f325a926e63%3A0x8f8b790a6e6850a8!2sJamia%20Masjid%20Amna!5e0!3m2!1sen!2s!4v1680867140456!5m2!1sen!2s"
-                            width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="loc-wrap">
                         <h4>USA</h4>
-                        <p>5214 California Unit #11223,San Francisco, CA 943343</p>
+                        <p>675 hopkins Rd Williamsville,</p>
+                        <p>Buffalo, NY 14221</p>
                     </div>
                     <div class="map">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2917.867647273188!2d-78.74155248514388!3d43.00212140230523!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d376b6301d08f1%3A0x62907af4df22f96e!2sHopkins%20Rd%2C%20Williamsville%2C%20NY%2014221%2C%20USA!5e0!3m2!1sen!2s!4v1680867426861!5m2!1sen!2s"
                             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="loc-wrap">
+                        <h4>Pakistan</h4>
+                        <p>A440 oppt to Masjid-e-Amna,</p>
+                        <p>Block 5 Gulshan e Iqbal, Karachi, Sindh</p>
+                    </div>
+                    <div class="map">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1075.7651899541536!2d67.08937384503122!3d24.91747294637507!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33f325a926e63%3A0x8f8b790a6e6850a8!2sJamia%20Masjid%20Amna!5e0!3m2!1sen!2s!4v1680867140456!5m2!1sen!2s"
+                            width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
