--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         <img src="img/icons/exp-01.svg" alt="">
                     </div>
                     <div class="txt">
-                        <h6>Andriod</h6>
+                        <h6>Android</h6>
                     </div>
                 </div>
                 <div class="expert-info">
