--- a/service.html
+++ b/service.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
+    <!-- --- Favicon ---  -->
+    <link rel="icon" href="img/icons/favicon.svg" type="img" sizes="16x16">
     <!-- ------ Bootstrap -----  -->
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
         
