--- a/contact-us.html
+++ b/contact-us.html
@@ -8,7 +8,7 @@
     <title>contact us</title>
 
     <!-- --- Favicon ---  -->
-    <link rel="icon" href="img/icons/favicon.svg" type="img" sizes="16x16">
+    <link rel="icon" href="img/favicon.png" type="img" sizes="16x16">
     <!-- ------ Bootstrap -----  -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 
