--- a/project.html
+++ b/project.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project</title>
     <!-- --- Favicon ---  -->
-    <link rel="icon" href="img/icons/favicon.svg" type="img" sizes="16x16">
+    <link rel="icon" href="img/favicon.png" type="img" sizes="16x16">
     <!-- ------ Bootstrap -----  -->
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
         
