--- a/service.html
+++ b/service.html
@@ -9,8 +9,8 @@
     <!-- --- Favicon ---  -->
     <link rel="icon" href="img/favicon.png" type="img" sizes="16x16">
     <!-- ------ Bootstrap -----  -->
-        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-        
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+
     <!-- ------ FontAwesome -----  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
@@ -99,7 +99,7 @@
                 <h2>The Better Path to Success for Your Business</h2>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-3 col-md-6">
                     <div class="ser-box">
                         <img src="img/icons/ser-icon-b1.svg" class="icn-b" alt="">
                         <img src="img/icons/ser-icon-w1.svg" class="icn-w" alt="">
@@ -109,17 +109,17 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-3 col-md-6">
                     <div class="ser-box">
-                        <img src="img/icons/ser-icon-b1.svg" class="icn-b" alt="">
-                        <img src="img/icons/ser-icon-w1.svg" class="icn-w" alt="">
+                        <img src="img/icons/ser-icon-b2.svg" class="icn-b" alt="">
+                        <img src="img/icons/ser-icon-w2.svg" class="icn-w" alt="">
                         <div class="txt">
                             <h3>Website Development</h3>
                             <p>Developing visually stunning and functional websites that engage your audience</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-3 col-md-6">
                     <div class="ser-box">
                         <img src="img/icons/ser-icon-b3.svg" class="icn-b" alt="">
                         <img src="img/icons/ser-icon-w3.svg" class="icn-w" alt="">
@@ -129,7 +129,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-3 col-md-6">
                     <div class="ser-box">
                         <img src="img/icons/ser-icon-b4.svg" class="icn-b" alt="">
                         <img src="img/icons/ser-icon-w4.svg" class="icn-w" alt="">
@@ -139,7 +139,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-3 col-md-6">
                     <div class="ser-box">
                         <img src="img/icons/ser-icon-b5.svg" class="icn-b" alt="">
                         <img src="img/icons/ser-icon-w5.svg" class="icn-w" alt="">
@@ -149,13 +149,35 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-3 col-md-6">
                     <div class="ser-box">
                         <img src="img/icons/ser-icon-b6.svg" class="icn-b" alt="">
                         <img src="img/icons/ser-icon-w6.svg" class="icn-w" alt="">
                         <div class="txt">
                             <h3>Graphic Designing</h3>
                             <p>Crafting unique and original designs that represent your brand's personality</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="ser-box">
+                        <img src="img/icons/ser-icon-b7.svg" class="icn-b" alt="">
+                        <img src="img/icons/ser-icon-w7.svg" class="icn-w" alt="">
+                        <div class="txt">
+                            <h3>Digital Marketing</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Obcaecati beatae </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="ser-box">
+                        <img src="img/icons/ser-icon-b8.svg" class="icn-b" alt="">
+                        <img src="img/icons/ser-icon-w8.svg" class="icn-w" alt="">
+                        <div class="txt">
+                            <h3>Social Media Content</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Obcaecati beatae </p>
                         </div>
                     </div>
                 </div>
@@ -345,7 +367,8 @@
                     <div class="right-social">
                         <p>Follow us</p>
                         <ul>
-                            <li><a href="mailto:info@apexinnovationtech.com"><i class="fa-solid fa-envelope"></i></a></li>
+                            <li><a href="mailto:info@apexinnovationtech.com"><i class="fa-solid fa-envelope"></i></a>
+                            </li>
                             <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                             <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                         </ul>
